Add more structure for tests and first test

--- a/tests/settings.php.sample
+++ b/tests/settings.php.sample
@@ -7,3 +7,8 @@ $db_settings = array(
 	'database'=>'basicobject-testing',
 	'charset'=>'utf8'
 );
+
+$memcache_settings = array(
+	'host' => 'localhost',
+	'port' => 11211
+);
